Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/T4721062a.out
T4721062a.java:14:13: compiler.err.var.might.not.have.been.initialized: i
1 error
